--- a/MVCproject1b/Views/Shared/_Layout.cshtml
+++ b/MVCproject1b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,15 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    <div class="navbar">
+        <div class="navbar-inner">
+            <div class="container-fluid">
+                <center>
+                    <h1>Welcome to XYZ Store</h1>
+                </center>
+            </div>
+        </div>
+    </div>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -31,7 +40,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Copyright of XYZ Store</p>
         </footer>
     </div>
 
